...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Spinner
                android:id="@+id/filterSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_spinner_background"
                android:popupBackground="@drawable/rounded_spinner_background"
                android:textSize="18sp"
                android:padding="12dp"
...
