...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/profile_image_edit"
                android:layout_toStartOf="@id/details_button"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
...
