...
            <!-- Add Button Container -->
            <FrameLayout
                android:id="@+id/add_fab_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/diary_button"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/map_button"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_circle_button"
...
